# learning-nucleotides

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
docker/experiment_one/: Dockerfile
experiments/: run_diffusion_five_d.py  run_hf_model.py  run_jax.py  run_kan.py
experiments/configs/denseformer/denseformer_1024/: denseformer-14m-1024-complement.yaml  denseformer-14m-1024-cross_entropy.yml  denseformer-14m-1024-headless.yaml  denseformer-14m-1024-two_d.yaml  denseformer-160m-1024-complement.yml  denseformer-160m-1024-cross_entropy.yml  denseformer-160m-1024-headless.yml  denseformer-160m-1024-two_d.yaml  denseformer-31m-1024-complement.yml  denseformer-31m-1024-cross_entropy.yaml  denseformer-31m-1024-headless.yml  denseformer-31m-1024-two_d.yaml  denseformer-410m-1024-complement.yaml  denseformer-410m-1024-cross_entropy.yaml  denseformer-410m-1024-headless.yaml  denseformer-410m-1024-two_d.yaml  denseformer-70m-1024-complement.yml  denseformer-70m-1024-cross_entropy.yml  denseformer-70m-1024-headless.yaml  denseformer-70m-1024-two_d.yml
experiments/configs/denseformer/denseformer_2048/: denseformer-14m-2048-complement.yml  denseformer-14m-2048-cross_entropy.yml  denseformer-14m-2048-headless.yaml  denseformer-14m-2048-two_d.yaml  denseformer-160m-2048-complement.yml  denseformer-160m-2048-cross_entropy.yaml  denseformer-160m-2048-headless.yaml  denseformer-160m-2048-two_d.yaml  denseformer-31m-2048-complement.yml  denseformer-31m-2048-cross_entropy.yaml  (+10 more)
experiments/configs/discrete/: test.yaml
experiments/configs/other/: vae-1024-reconstruction.yml
experiments/configs/wavelet/: wavelet-14m-2048-complement.yaml  wavelet-14m-2048-cross_entropy.yaml  wavelet-14m-2048-headless.yaml  wavelet-14m-2048-two_d.yml
experiments/data/: dataset.py  generate_synthetic_data.py  two_d_representation_dataset.py
experiments/losses/: __init__.py  ce_plus_energy.py  complement_loss.py  cross_entropy_loss.py  denseformer_loss.py  discrete_ce_loss.py  headless_loss.py  ph_loss.py  reconstruction_loss.py  two_d_loss.py  two_d_loss_euclidean.py  two_d_plus_ce_loss.py  wasserstein_loss_two_d.py
experiments/models/: __init__.py  autoencoder.py  denseformer.py  discrete_flow_matching.py  jax_transformer.py  wavelet.py
experiments/slurm/: create_config_list.sh  create_upload_list.sh  sbatch_array_NHR_template.sh  submit_model_upload.sh  submit_run_hf_model.sh
experiments/slurm/examples/: ex-hf_model_upload.slurm  ex-run_docker.slurm  ex-run_hf_model.slurm  hf_model_upload.slurm  run_docker.slurm  run_hf_model.slurm  submit_run_hf_model.sh
experiments/utils/: __init__.py  adopt.py  config.py  dataset.py  dataset_v2.py  dataset_v2_part2.py  hf_upload.py  model_utils.py  trainer_utils.py
notebooks/: create_benchmark_embeddings.py  decoder_sizes_v3.csv  eval_notebook_figs_preprint.py  eval_notebook_finetune_loss.py  flowmatching_model.py  learnability_of_dna_paper_.py  model_benchmarks.py  model_evals.py  seq_eval_plots.py  seq_evals.py  synthetic_seqs.ipynb
tests/: test_format_param_count.py  test_model_pipeline.py
tests/configs/: test-denseformer-config.yml  test-evo-config.yml  test-pythia-config.yml
(+50 files in other folders)
