[build-system]
requires = ["setuptools", "wheel", "packaging", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-nucleotides"
version = "0.0.1"
description = "Experiments on the learnability of DNA sequences"
authors = [{ name = "dna", email = "tbd@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "datasets",
  "transformers",
  "huggingface_hub[cli]",
  "accelerate",
  "seaborn",
  "pydantic",
  "kan-gpt @ git+https://github.com/hssn-20/kan-gpt",
  "PyWavelets",
  "evo-model",
  "levenshtein",
  "audio-diffusion-pytorch",
]

[tool.uv]
dev-dependencies = ["ruff", "pytest", "pre-commit"]

[tool.setuptools.packages.find]
where = ["experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO -sv --durations=0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "W",
  "F",   # pyflakes
  "PL",  # pylint
  "I",   # isort
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "RUF", # ruff
]
fixable = ["ALL"]
ignore = [
  "PLR0913", # too many arguments
  "PLR0914", # too many local variables
  "PLR0917", # too many positional arguments
  "PLR2004", # magic number
  "PLW2901", # for loop variable overwritten by assignment target
  "E501",    # line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"